--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "node-fetch": "^2.6.1",
     "node-file-cache": "^1.0.2",
     "redis": "^3.0.2",
+    "twit": "^2.2.11",
     "web3": "^1.3.1",
     "web3-eth-abi": "^1.3.1",
     "web3-utils": "^1.3.1"
